2001-11-05  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* module/oprofile.c: fix nr_interrupts sysctl

2001-11-04  Philippe Elie  <ph_e@club-internet.fr>

	* dae/op_start:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui: handle note table size sysctl

	* module/op_syscalls.c: handle dname hash coding collision with
	  a linear search.

	* module/oprofile.c:
	* module/oprofile.h:
	* module/op_syscalls.c: Use a struct to hold the whole
	  sysctl settable things rather global var.

2001-11-03  Philippe Elie  <ph_e@club-internet.fr>

	* modules/oprofile.h: add a sysctl struct to hold
	  all sysctl set-able variable
	
	* modules/oprofile.c: two bugs fixes.

2001-11-02  Philippe Elie  <ph_e@club-internet.fr>

	* modules/oprofile.h: minor cleanup
	* modules/oprofile.c: better handling of irq statistics

2001-10-31  John Levon  <moz@compsoc.man.ac.uk>

	* module.oprofile.c: add comment about unfixable
	  races.
 
2001-10-30  John Levon  <moz@compsoc.man.ac.uk>

	* Move module code into module/ subdir. Bye
	  bye CVS history :/
 
2001-10-30  John Levon  <moz@compsoc.man.ac.uk>

	* op_x86.c: complain properly about lAPIC-less
	  machines
 
2001-10-26  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2001-10-26  H. J. Lu <hjl@users.sf.net>

	* Makefile.in: use $(LD) not ld
 
2001-10-25  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: fix version.h checking for gcc 2.91.66

2001-10-25  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in:
	* doc/Makefile.in:
	* dae/Makefile.in:
	* pp/Makefile.in:
	* gui/Makefile.in: add $DESTDIR to prefix (part from
	  H.J. Lu)

2001-10-25  H. J. Lu  <hjl@users.sf.net>

	* configure.in: better version.h workaround

	* doc/*.1:
	* doc/Makefile.in: better .so manpage install

2001-10-25  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: minor change.
	* pp/opf_filter.cpp: repair short option -a and -s
