@@ -1,3 +1,9 @@
+2001-11-06  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/oprofile.h:
+	* module/oprofile.c: make allow_unload exist for UP
+	  too (default to 1)
+ 
 2001-11-05  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
